This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Fix undefined behavior in os.utime() on Windows
Type: crash Stage: resolved
Components: Extension Modules Versions: Python 3.8, Python 3.7, Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: serhiy.storchaka Nosy List: miss-islington, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2018-12-01 11:42 by serhiy.storchaka, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 10844 merged serhiy.storchaka, 2018-12-01 11:46
PR 10845 merged miss-islington, 2018-12-01 12:30
PR 10846 merged miss-islington, 2018-12-01 12:30
Messages (4)
msg330850 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-12-01 11:42
The hFile variable is used uninitialized in os.utime() on Windows when an error is raised in arguments parsing. This is an undefined behavior, and can cause a crash.
msg330851 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-12-01 12:30
New changeset 32bc11c33cf5ccea165b5f4ac3799f02fdf9c76a by Serhiy Storchaka in branch 'master':
bpo-35371: Fix possible crash in os.utime() on Windows. (GH-10844)
https://github.com/python/cpython/commit/32bc11c33cf5ccea165b5f4ac3799f02fdf9c76a
msg330852 - (view) Author: miss-islington (miss-islington) Date: 2018-12-01 12:52
New changeset 265b41996aa3f604624a8046d1c314a1aee4b590 by Miss Islington (bot) in branch '3.7':
bpo-35371: Fix possible crash in os.utime() on Windows. (GH-10844)
https://github.com/python/cpython/commit/265b41996aa3f604624a8046d1c314a1aee4b590
msg330853 - (view) Author: miss-islington (miss-islington) Date: 2018-12-01 12:53
New changeset 013832ff964a0b3b59e04a07a33bae65c1c3ae84 by Miss Islington (bot) in branch '3.6':
bpo-35371: Fix possible crash in os.utime() on Windows. (GH-10844)
https://github.com/python/cpython/commit/013832ff964a0b3b59e04a07a33bae65c1c3ae84
History
Date User Action Args
2022-04-11 14:59:08adminsetgithub: 79552
2018-12-01 18:10:31serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2018-12-01 12:53:39miss-islingtonsetmessages: + msg330853
2018-12-01 12:52:06miss-islingtonsetnosy: + miss-islington
messages: + msg330852
2018-12-01 12:30:45miss-islingtonsetpull_requests: + pull_request10081
2018-12-01 12:30:34miss-islingtonsetpull_requests: + pull_request10080
2018-12-01 12:30:22serhiy.storchakasetmessages: + msg330851
2018-12-01 11:46:22serhiy.storchakasetkeywords: + patch
stage: patch review
pull_requests: + pull_request10079
2018-12-01 11:42:08serhiy.storchakacreate