bpo-35371: Fix possible crash in os.utime() on Windows. (GH-10844)